--- a/MotorcycleAdventures/MotorcycleAdventures/App.xaml
+++ b/MotorcycleAdventures/MotorcycleAdventures/App.xaml
@@ -22,13 +22,17 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <AbsoluteLayout Grid.Row="0" BackgroundColor="{Binding Source={x:Static core:Constants.Orange}}" Padding="0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
-                    <Image Source="Logo.png" Grid.Column="0" Grid.Row="0" Aspect="AspectFit" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"
+                <AbsoluteLayout Grid.Row="0" 
+                                BackgroundColor="{Binding Source={x:Static core:Constants.Orange}}" 
+                                Padding="0" 
+                                VerticalOptions="CenterAndExpand" 
+                                HorizontalOptions="CenterAndExpand">
+                    <Image Source="Logo.png" 
+                           Aspect="AspectFit" 
+                           VerticalOptions="CenterAndExpand" 
+                           HorizontalOptions="CenterAndExpand"
                            AbsoluteLayout.LayoutBounds="0.5, 0.5, -1, -1"
                            AbsoluteLayout.LayoutFlags="PositionProportional">
-                        <Image.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding SupportCommand}"/>
-                        </Image.GestureRecognizers>
                     </Image>
                 </AbsoluteLayout>
                 <ContentPresenter Grid.Row="1"/>
