--- a/MotorcycleAdventures/MotorcycleAdventures/Views/HomePage.xaml
+++ b/MotorcycleAdventures/MotorcycleAdventures/Views/HomePage.xaml
@@ -7,31 +7,66 @@
                  ControlTemplate="{StaticResource HeaderTemplate}">
         <ScrollView>
             <ScrollView.Content>
-                <Grid BackgroundColor="White" Padding="30, 15" RowSpacing="0">
+                <Grid >
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="20"/>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="70"/>
                     </Grid.RowDefinitions>
-                    <Label Text="What adventure did you go on today?" TextColor="#9f1c1c" FontFamily="{Binding FontName}"
-                   HorizontalOptions="CenterAndExpand" Grid.Row="0" FontSize="20" Margin="0, 20, 0, 5"/>
 
-                    <Label Text="{Binding Date}" TextColor="#ef3f3f" FontFamily="{Binding FontName}"
-                   HorizontalOptions="CenterAndExpand" Grid.Row="1" FontSize="10"/>
+                    <AbsoluteLayout Grid.Row="0"
+                                    IsVisible="{Binding DailyAnswerNotificationTask.IsNotCompleted}">
+                        <Label Text="Loading..." TextColor="Red" FontSize="16" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.5, 0.5, -1, -1"/>
+                    </AbsoluteLayout>
 
-                    <Frame BorderColor="Transparent" Grid.Row="2" Padding="0" Margin="0" CornerRadius="5" HasShadow="False" VerticalOptions="FillAndExpand" MinimumHeightRequest="200">
-                        <Frame.Triggers>
-                            <DataTrigger  TargetType="Frame" Binding="{Binding Device}"  Value="Android">
-                                <Setter Property="Frame.BorderColor" Value="Transparent"/>
-                            </DataTrigger>
-                        </Frame.Triggers>
-                        <Editor Grid.Row="4" Placeholder="Enter your answer here..." PlaceholderColor="Gray" FontSize="14" TextColor="Gray" Text="" x:Name="TxtAnswer"
+                    <Grid Grid.Row="0" 
+                          BackgroundColor="White" 
+                          Padding="30, 15" 
+                          RowSpacing="0" 
+                          IsVisible="{Binding DailyAnswerNotificationTask.IsCompleted}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="50"/>
+                            <RowDefinition Height="20"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="70"/>
+                        </Grid.RowDefinitions>
+                        <Label Text="What adventure did you go on today?" 
+                               TextColor="#9f1c1c" 
+                               FontFamily="{Binding FontName}"
+                                HorizontalOptions="CenterAndExpand" 
+                               Grid.Row="0" 
+                               FontSize="20" 
+                               Margin="0, 20, 0, 5"/>
+
+                        <Label Text="{Binding Date, StringFormat='{0:MMMM dd, yyyy}'}" 
+                               TextColor="#ef3f3f" 
+                               FontFamily="{Binding FontName}"
+                               HorizontalOptions="CenterAndExpand" 
+                               Grid.Row="1" 
+                               FontSize="10"/>
+
+                        <Frame BorderColor="LightGray" 
+                               Grid.Row="2" 
+                               Padding="0" 
+                               Margin="0" 
+                               CornerRadius="5" 
+                               HasShadow="False" 
+                               VerticalOptions="FillAndExpand" 
+                               MinimumHeightRequest="200">
+                            <Frame.Triggers>
+                                <DataTrigger  TargetType="Frame" Binding="{Binding Device}"  Value="Android">
+                                    <Setter Property="Frame.BorderColor" Value="Transparent"/>
+                                </DataTrigger>
+                            </Frame.Triggers>
+                            <Editor Placeholder="Enter your answer here..." 
+                                    PlaceholderColor="Gray" 
+                                    FontSize="14" 
+                                    TextColor="Gray" 
+                                    Text="{Binding DailyAnswer.Answer}" 
+                                    x:Name="TxtAnswer"
                                 VerticalOptions="FillAndExpand"
                                 MinimumHeightRequest="200"/>
-                    </Frame>
+                        </Frame>
 
-                    <Button Grid.Row="3" Text="SAVE" Margin="0 , 20, 0, 10" 
+                        <Button Grid.Row="3" Text="SAVE" Margin="0 , 20, 0, 10" 
                             BackgroundColor="{Binding Source={x:Static local:Constants.Orange}}" 
                             Padding="20, 10" CornerRadius="2"
                             x:Name="BtnSave"
@@ -40,7 +75,10 @@
                             FontAttributes="Bold"
                             TextColor="White"/>
 
+                    </Grid>
+
                 </Grid>
+
             </ScrollView.Content>
         </ScrollView>
     </ContentView>
